feat: add fonts and images assets, update styles

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,8 @@
 
 /* Font families */
 body {
-    font-family: "Work Sans", "Noto Sans", sans-serif;
+    /* font-family: "Work Sans", "Noto Sans", sans-serif; */
+    font-family: "Noto Sans", sans-serif;
 }
 
 /* Background colors */
