--- a/styles/main.css
+++ b/styles/main.css
@@ -244,7 +244,7 @@ body {
     font-weight: 700;
     font-size: 2.25rem;
     line-height: 1.2;
-    color: #111418;
+    color: ##2E404D; /* Cambiado */
     margin-bottom: 1rem;
 }
 
@@ -259,7 +259,7 @@ body {
     font-weight: 700;
     font-size: 2.25rem;
     line-height: 1.2;
-    color: #111418;
+    color: ##2E404D; /* Cambiado */
     margin-bottom: 1rem;
 }
 
@@ -274,7 +274,7 @@ body {
     font-weight: 700;
     font-size: 1.5rem;
     line-height: 1.3;
-    color: #111418;
+    color: ##2E404D; /* Cambiado */
     margin-bottom: 1.5rem;
 }
 
@@ -283,7 +283,7 @@ body {
     font-weight: 600;
     font-size: 1.25rem;
     line-height: 1.4;
-    color: #111418;
+    color: ##2E404D; /* Cambiado */
 }
 
 /* Material Icons custom styles */
